--- a/lsp-codemirror/example/package.json
+++ b/lsp-codemirror/example/package.json
@@ -2,7 +2,8 @@
 	"scripts": {
 		"server": "node server.js",
 		"start": "concurrently \"run-p server parcel\" \"open http://localhost:4000\"",
-		"parcel": "parcel watch index.html"
+		"parcel": "parcel watch ./index.html",
+		"parcel:b": "parcel build index.html"
 	},
 	"dependencies": {
 		"codemirror": "^5.58.2",
