--- a/object-builder/package.json
+++ b/object-builder/package.json
@@ -1,11 +1,12 @@
 {
-	"scripts": {
-		"build": "ts-node src/index.ts"
-	},
-	"devDependencies": {
-		"@types/node": "^17.0.12",
-		"ts-node": "^10.4.0",
-		"tslib": "^2.3.1",
-		"typescript": "^4.5.5"
-	}
+  "scripts": {
+    "ts-node": "ts-node",
+    "build": "ts-node src/index.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.12",
+    "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
+  }
 }
